	* New tabs should scroll correctly again (Tim Ringenbach)
	* Ampersands in links should work right (Tim Ringenbach)
	* IM Image support for AIM is back. It may be buggy, and depends on
	  Direct IM and inherits all its bugs.
	* Direct IM for AIM should be slightly less buggy, and may actually
	  work now, if at least one side isn't behind a NAT or firewall.

	Preference Changes(Stu Tomlinson):
	* Added a "none" smiley theme to replace the "Show graphical
	  smileys" option
	* Removed "Show logins in window," default to yes
	* Removed "Send URLs as links," default to yes (in protocols that
	  support HTML)
	* Removed "Show URLs as links," default to yes
	* Removed New window height & width and Entry field height for Chats & IMs,
	  sizes are now saved automatically
	* Removed "Tab-complete nicks" default to yes
	* Removed "Old-style tab completion", no longer supported
	* Removed "Sending message removes away status", default to no
	* Replaced "Ignore colors", "Ignore font faces" and "Ignore font sizes"
	  with "Ignore formatting on incoming messages"
	* Removed "Show numbers in groups", default to yes
	* Removed "Icons on tabs", default to yes
	* Removed "Sounds when you log in", default to no
	* Removed "Seconds before resending autoresponse", default to 600 seconds
	* Removed "Send autoresponse in active conversations", default to no
	* Removed "Show people joining in window", default to yes
	* Removed "Show people leaving in window", default to yes
	* Added "Conversation placement - By conversation count"

version 0.77 (04/22/2004):
	New Features:
	* The System Log returns (Ka-Hing Cheung)
	* Added a conversation-drag-ended signal (Etan Reisner)
	* Reorganized and cleaned up the MSN protocol plugin (Felipe Contreras)
	* Added the -c option to specify location of the .gaim directory, removed
	  the outdated -f option that no longer had any effect (Daniel Atallah)
	* Novell GroupWise protocol support added (Novell)
	* WYSIWYG improvements (Tim Ringenbach)