@@ -296,7 +296,7 @@ Check the file SIGNALS for the meaning of these signals; this is
 intended to be a list only of their arguments.  Signal callbacks will
 be made in their own namespace, and arguments to those signal
 callbacks will live in the namespace 'event' underneath that
-namespace.  To briefly illustrate, the signal received-im-msg is
+namespace.  To briefly illustrate, the signal receiving-im-msg is
 provided with three arguments; the account on which the IM was
 received, the screen name of the user sending the IM, and the text of
 the IM.  These arguments live in the variables event::account,
@@ -304,14 +304,14 @@ event::sender, and event::buffer, respectively.  Therefore a callback
 which notifies the user of an incoming IM containing the word 'shizzle'
 might look like this:
 
-gaim::signal connect [gaim::conversation handle] received-im-msg {
+gaim::signal connect [gaim::conversation handle] receiving-im-msg {
 	if {[ string match "*shizzle*" $event::buffer ]} {
 		gaim::notify -info "tcl plugin" "Fo' shizzle" \
 			"$event::sender is down with the shizzle"
 	}
 }
 
-Note that for some signals (notably received-im-msg, sending-im-msg,
+Note that for some signals (notably receiving-im-msg, sending-im-msg,
 and their chat counterparts), changes to the event arguments will
 change the message itself from Gaim's vantage.  For those signals
 whose return value is meaningful, returning a value from the Tcl event
